--- a/index.html
+++ b/index.html
@@ -1,7 +1,56 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
+<!--
+	Intensify by TEMPLATED
+	templated.co @templatedco
+	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
+-->
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+	<head>
+		<title>Gigi bakery</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+	</head>
+	<body>
+
+		<!-- Header -->
+			<header id="header">
+				<a href="index.html" class="logo">Gigi bakery</a>
+			</header>
+
+		<!-- Banner -->
+			<section id="banner">
+				<div class="content">
+					<h1>Estamos preparando algo delicioso!</h1>
+					<p>Pronto podrás disfrutar de nuestros deliciosos postres y pastelería hecha con amor.<br />Mientras tanto puedes seguirnos en Instagram para ver nuestras novedades y hacer pedidos por nuestro inbox.</p>
+					<ul class="actions">
+						<li><a href="https://www.instagram.com/gigibakerypty/?hl=es-la" target="_blank" class="button scrolly">@gigibakery</a></li>
+					</ul>
+				</div>
+			</section>
+
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<h2>Contacto</h2>
+					<ul class="actions">
+						<!-- <li><span class="icon fa-phone"></span> <a href="#">(000) 000-0000</a></li> -->
+						<li><span class="icon fa-instagram"></span> <a href="https://www.instagram.com/gigibakerypty/?hl=es-la">@gigibakerypty</a></li>
+						<li><span class="icon fa-envelope"></span> <a href="mailto:gigibakerypty@gmail.com">gigibakerypty@gmail.com</a></li>
+						<li><span class="icon fa-map-marker"></span>San Francisco, Panamá, República de Panamá</li>
+					</ul>
+				</div>
+				<div class="copyright">
+					&copy; Untitled. Design <a href="https://templated.co">TEMPLATED</a>. Images <a href="https://unsplash.com">Unsplash</a>.
+				</div>
+			</footer>
+
+		<!-- Scripts -->
+			<script src="assets/js/jquery.min.js"></script>
+			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
+			<script src="assets/js/util.js"></script>
+			<script src="assets/js/main.js"></script>
+
+	</body>
 </html>
