--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
 <!DOCTYPE HTML>
-<!--
-	Intensify by TEMPLATED
-	templated.co @templatedco
-	Released for free under the Creative Commons Attribution 3.0 license (templated.co/license)
--->
 <html>
 	<head>
 		<title>Gigi bakery</title>
 		<meta charset="utf-8" />
+		<meta name="description" content="Gigi bakery pasteleria artesanal">
+		<meta name="keywords" content="pasteleria, artesanal, cakes, panama, amor">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
@@ -24,24 +21,21 @@
 					<h1>Estamos preparando algo delicioso!</h1>
 					<p>Pronto podrás disfrutar de nuestros deliciosos postres y pastelería hecha con amor.<br />Mientras tanto puedes seguirnos en Instagram para ver nuestras novedades y hacer pedidos por nuestro inbox.</p>
 					<ul class="actions">
-						<li><a href="https://www.instagram.com/gigibakerypty/?hl=es-la" target="_blank" class="button scrolly">@gigibakery</a></li>
+						<li><a href="#contacto" class="button scrolly">Contactar</a></li>
 					</ul>
 				</div>
 			</section>
 
 		<!-- Footer -->
 			<footer id="footer">
-				<div class="inner">
+				<div class="inner" id="contacto">
 					<h2>Contacto</h2>
 					<ul class="actions">
 						<!-- <li><span class="icon fa-phone"></span> <a href="#">(000) 000-0000</a></li> -->
 						<li><span class="icon fa-instagram"></span> <a href="https://www.instagram.com/gigibakerypty/?hl=es-la">@gigibakerypty</a></li>
 						<li><span class="icon fa-envelope"></span> <a href="mailto:gigibakerypty@gmail.com">gigibakerypty@gmail.com</a></li>
-						<li><span class="icon fa-map-marker"></span>San Francisco, Panamá, República de Panamá</li>
+						<li><span class="icon fa-map-marker"></span> San Francisco, Panamá, República de Panamá</li>
 					</ul>
-				</div>
-				<div class="copyright">
-					&copy; Untitled. Design <a href="https://templated.co">TEMPLATED</a>. Images <a href="https://unsplash.com">Unsplash</a>.
 				</div>
 			</footer>
 
